tests/baselines/reference/generatorTypeCheck9.errors.txt
generatorTypeCheck9.ts(1,17): error TS2505: A generator cannot have a 'void' type annotation.


==== generatorTypeCheck9.ts (1 errors) ====
    function* g3(): void { }
                    ~~~~
!!! error TS2505: A generator cannot have a 'void' type annotation.